# nl2flow

./: .gitignore  .pre-commit-config.yaml  .pylintrc  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GETTING_STARTED.md  README.md  STARTER_TEAM.md  innersource.yaml  mypy.ini  pddl.json  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: -add_custom_template-.md  good-first-issue.md  request-access.md  update-templates.md
.github/workflows/: python-package.yml  run-all-tests.yml
docs/: CONTRIBUTING.md  temp_data_gen.md
nl2flow/: __version__.py
nl2flow/compile/: compilations.py  flow.py  operators.py  options.py  schemas.py  utils.py
nl2flow/compile/basic_compilations/: compile_confirmation.py  compile_constraints.py  compile_goals.py  compile_history.py  compile_labels.py  compile_mappings.py  compile_operators.py  compile_reference.py  compile_slots.py  utils.py
nl2flow/compile/validators/: flow_validator.py  plan_validator.py  validator.py
nl2flow/debug/: debug.py  schemas.py
nl2flow/plan/: README.md  options.py  planner.py  planners.py  schemas.py  utils.py
nl2flow/plan/planners/: kstar.py
nl2flow/printers/: codelike.py  driver.py  explain.py  verbalize.py
nl2flow/services/: sketch.py
nl2flow/services/compilations/: catalog_compilations.py  sketch_compilations.py
nl2flow/services/schemas/: sketch_options.py  sketch_schemas.py
nl2flow/utility/: file_utility.py
profiler/common_helpers/: hash_helper.py  string_helper.py  time_helper.py
profiler/converters/: converter_variables.py  info_2_flow_converter.py
profiler/data/: api_spec_data.py
profiler/data_types/: agent_info_data_types.py  generator_data_type.py  generator_output_data_type.py  pddl_generator_datatypes.py  quadruple_generator_data_types.py  validator_data_types.py
profiler/generators/batch_data_generator/: batch_data_generator.py
profiler/generators/dataset_generator/: dataset_generator.py
profiler/generators/description_generator/: descripter_generator_data.py  description_generator.py  description_generator_helper.py
profiler/generators/info_generator/: agent_info_data_types.py  agent_info_generator.py  agent_info_generator_coupling_helper.py  agent_info_generator_helper.py  generator_output_data_type.py  generator_variables.py
profiler/generators/quadruple_generator/: quadruple_generator.py  quadruple_generator_helper.py  quadruple_generator_variables.py
profiler/test_helpers/: profiler_test_helper.py  profiler_test_helper_variables.py
profiler/validators/: agent_info_generator_test_utils.py  plan_str_pre_processor.py  validator_executer.py
tests/: conftest.py  output.sas  testing.py
tests/basic/: test_basic.py  test_basic_but_not_basic.py  test_monday.py
tests/conftest/: conftest.py
tests/constraints/: test_constraints.py
tests/debugger/: test_debugger_from_flow.py  test_debugger_from_pddl.py
tests/debugger/custom_formatter/: custom_print.py
tests/errors/: test_duplicates.py  test_forbidden.py  test_references.py
tests/experiments/: test_llm_parsing.py
tests/goals/: test_and_or_goals.py  test_goals_advanced.py  test_goals_basic.py  test_or_and_goals.py
tests/history/: test_history_basic.py  test_history_progression.py  test_history_replan.py
tests/mappings/: test_enum.py  test_mappings_advanced.py  test_mappings_basic.py  test_mappings_multi_instance.py
tests/optimizations/: test_no_instances.py
tests/orderings/: test_orderings.py
tests/planner/flags/: test_flags.py
tests/planner/formatting/: test_codelike_print.py  test_explain_print.py  test_prettifier.py  test_verbalize_print.py
tests/planner/timeout/: test_timeout.py
tests/profiler/common_helpers/: test_time_helper.py
tests/profiler/converters/: test_info_2_flow_converter.py
tests/profiler/data/pddl/: domain.pddl  plan.pddl  (+1 more)
tests/profiler/data_types/: test_agent_info_data_type.py  test_generator_data_type.py
tests/profiler/validators/: test_plan_str_pre_processor.py  test_validator_executor.py
tests/retry/: test_retry.py
tests/sketch/: test_advanced_constraints.py  test_advanced_objects.py  test_basic.py
tests/sketch/data/: 00-example_sketch.yaml  02-simple_sketch_relaxed.yaml  03-sketch_with_slots.yaml
tests/sketch/sample_catalogs/: catalog.yaml
tests/sketch/sample_sketches/: 00-example_sketch.yaml  01-simple_sketch.yaml  02-simple_sketch_in_order.yaml  03-sketch_with_objects.yaml  03-sketch_with_slots.yaml  04-sketch_with_objects.yaml  04-sketch_with_slots.yaml  05-sketch_with_objects_and_mapping.yaml  06-sketch_with_instantiated_goals.yaml  07-sketch_with_constraints.yaml  08-sketch_with_complex_goals.yaml
tests/slots/: test_optional_parameters.py  test_slots_advanced.py  test_slots_basic.py  test_slots_ordered.py
tests/temp/: problematic_data.json  test_iss32.py
tests/test_basic/: test_basic.py  test_basic_but_not_basic.py
tests/test_mappings/: test_mappings_advanced.py  test_mappings_basic.py  test_mappings_multi_instance.py
tests/test_sketch/: test_basic.py
tests/test_sketch/data/: 01-simple_sketch.yaml  04-sketch_with_objects.yaml  05-sketch_with_objects_and_mapping.yaml  06-sketch_with_instantiated_goals.yaml  07-sketch_with_constraints.yaml  catalog.yaml  simple_sketch.yaml
tests/test_slots/: test_slots_advanced.py  test_slots_basic.py
tests/test_typing/: test_typing_advanced.py  test_typing_basic.py
tests/typing/: test_typing_advanced.py  test_typing_basic.py
tests/utils/: test_compile_utils.py
(+12 files in other folders)
