[project]
name = "nl2flow"
version = "0.0.1"
authors = [
  { name = "Tathagata Chakraborti", email = "tchakra2@ibm.com" },
  { name = "Jung koo Kang", email = "jungkoo.kang@ibm.com" },
]
description = "A PDDL interface to flow construction and its profiler"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "tarski~=0.8.2",
  "pyhaikunator==0.0.4",
  "pydantic==1.10.2",
  "requests==2.28.1",
  "datasets~=2.11.0",
]

[project.optional-dependencies]
dev = [
  "pre-commit==2.20.0",
  "black==22.8.0",
  "flake8==5.0.4",
  "coverage==6.5.0",
  "pylint==2.15.3",
]
test = ["pytest==7.1.3"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["profiler*", "nl2flow*"]

[project.urls]
"Homepage" = "https://github.ibm.com/research-dba/pddl_planner_profiler"
"Repository" = "https://github.ibm.com/research-dba/pddl_planner_profiler"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
