[project]
name = "nl2flow"
version = "0.0.4"
description = "NL2Flow: A PDDL interface to flow construction"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}

authors = [
  {name = "Tathagata Chakraborti", email = "tchakra2@ibm.com"},
  {name = "Jung koo Kang"},
]

maintainers = [
  {name = "Tathagata Chakraborti", email = "tchakra2@ibm.com"},
  {name = "Jung koo Kang"},
]

keywords = [
  "automated planning",
  "natural language processing",
  "process automation",
  "service composition",
  "conversational agents",
  "generative ai",
  "large language models",
]

classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Natural Language :: English",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: MacOS",
  "Operating System :: Unix",
  "Programming Language :: Python :: 3.8",
  "Framework :: Pydantic :: 2",
  "Framework :: Pytest",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Human Machine Interfaces",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Software Development :: User Interfaces"
]

# This field lists other packages that your project depends on to run.
# Any package you put here will be installed by pip when your project is
# installed, so they must be valid existing projects.
#
# For an analysis of this field vs pip's requirements files see:
# https://packaging.python.org/discussions/install-requires-vs-requirements/
dependencies = ["pydantic>=2.4.2", "pyyaml", "tarski", "StrEnum", "kstar-planner", "forbiditerative", "haikunator"]

[project.optional-dependencies]
dev = ["check-manifest", "pytest", "pytest-mock", "black", "pylint", "flake8", "pre-commit", "Flake8-pyproject", "coverage", "pytest-mock", "types-PyYAML"]

[project.urls]
"Homepage" = "https://github.com/IBM/nl2flow"
"Bug Reports" = "https://github.com/IBM/nl2flow/issues"
"Funding" = "https://research.ibm.com"
"Say Thanks!" = "https://tchakra2.com"
"Source" = "https://github.com/IBM/nl2flow"

# The following would provide a command line executable called `sample`
# which executes the function `main` from this package when invoked.
# [project.scripts]  # Optional
# sample = "sample:main"

# This is configuration specific to the `setuptools` build backend.
# If you are using a different build backend, you will need to change this.
[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["nl2flow*", "profiler*"]

# If there are data files included in your packages that need to be
# installed, specify them here.
# package-data = {"sample" = ["*.dat"]}

[build-system]
# These are the assumed default build requirements from pip:
# https://pip.pypa.io/en/stable/reference/pip/#pep-517-and-518-support
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"


[tool.black]
line-length = 120
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.mypy]
python_version=3.9
mypy_path = "src"

show_column_numbers = true

# show error messages from unrelated files
follow_imports = "normal"

# suppress errors about unsatisfied imports
ignore_missing_imports = true

# be strict
disallow_untyped_calls = true
warn_return_any = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
no_implicit_optional = true

# Unreachable blocks have been an issue when compiling mypyc, let's try
# to avoid 'em in the first place.
warn_unreachable = true

# The following are off by default.  Flip them on if you feel adventurous.
disallow_untyped_defs = true
check_untyped_defs = true

[tool.pylint."MAIN"]
py-version=3.9

[tool.pylint."FORMAT"]
max-line-length = 120

[tool.flake8]
extend-ignore = ["E203", "E501"]
count = true
max-line-length = 120
max-complexity = 18
